Replace OpenAI with Google Gemini across module-0 and module-1

--- a/.gitignore
+++ b/.gitignore
@@ -219,3 +219,7 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 module-6/deployment/docker-compose.yml
+
+# LangGraph runtime files
+.langgraph_api/
+state_db/
